--- a/othersources.html
+++ b/othersources.html
@@ -1,3 +1,4 @@
+<h2>Other sources we sync</h2>
 <ul>
 <li><a href="https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb" target="_blank" rel="noopener">Litteraturbanken</a></li>
 <li><a href="https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner.uppsalakyrkogardar.ipynb" target="_blank" rel="noopener">Kulturpersoner Uppsala kyrkog&aring;rdar</a></li>
