--- a/othersources.html
+++ b/othersources.html
@@ -1,9 +1,7 @@
-<h2>Other sources we sync</h2>
-<ul>
-<li><a href="https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb" target="_blank" rel="noopener">Litteraturbanken</a></li>
-<li><a href="https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner.uppsalakyrkogardar.ipynb" target="_blank" rel="noopener">Kulturpersoner Uppsala kyrkog&aring;rdar</a></li>
-<li><a href="https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb" target="_blank" rel="noopener">Nobelprize.org</a></li>
-<li><a href="https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb" target="_blank" rel="noopener">SBL</a></li>
-<li><a href="https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb" target="_blank" rel="noopener">SKBL</a></li>
-<li><a href="https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb" target="_blank" rel="noopener">Svenska Akademin</a></li>
-</ul>
+#### Other sources we sync
+* [kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Uppsalakyrkogård%20kulturpersoner.ipynb)
+* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)
+* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)
+* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)
+* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  
+* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)  
