--- a/othersources.html
+++ b/othersources.html
@@ -1,7 +1,11 @@
-#### Other sources we sync
 * [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)
-* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)
+* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb) 
+  * WD property [P5101](https://www.wikidata.org/wiki/Property_talk:P5101) [P5123](https://www.wikidata.org/wiki/Property_talk:P5123)
 * [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)
-* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)
-* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  
-* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)  
+  * WD [property 8024](https://www.wikidata.org/wiki/Property:P8024)
+* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb) 
+  * WD [property 3217](https://www.wikidata.org/wiki/Property:P3217) 
+* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)
+  * WD [property 4963](https://www.wikidata.org/wiki/Property:P4963)
+* [Svenska Akademien](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademien.ipynb) 
+  * WD [property 5325](https://www.wikidata.org/wiki/Property:P5325) 
